refactor gameoutcome to match, including all related methods update Readme to recent changes regen openapi
closes #13
