# gamertrack-application/src/main/java/com/gepardec/rest/model/command/CreateMatchCommand.java
@@ -1,0 +1,7 @@
+package com.gepardec.rest.model.command;
+
+import java.util.List;
+
+public record CreateMatchCommand(Long gameId, List<Long> userIds) {
+
+}
