# gamertrack-application/src/main/java/com/gepardec/rest/model/mapper/RestMapper.java
@@ -1,38 +1,43 @@
 package com.gepardec.rest.model.mapper;
 
-import com.gepardec.model.dtos.GameDto;
-import com.gepardec.model.dtos.GameOutcomeDto;
-import com.gepardec.rest.model.command.CreateGameCommand;
-import com.gepardec.rest.model.command.CreateGameOutcomeCommand;
-import com.gepardec.rest.model.command.UpdateGameCommand;
-import com.gepardec.rest.model.command.UpdateGameOutcomeCommand;
 import com.gepardec.model.dto.ScoreDto;
 import com.gepardec.model.dto.UserDto;
+import com.gepardec.model.dtos.GameDto;
+import com.gepardec.model.dtos.MatchDto;
+import com.gepardec.rest.model.command.CreateGameCommand;
+import com.gepardec.rest.model.command.CreateMatchCommand;
 import com.gepardec.rest.model.command.CreateScoreCommand;
 import com.gepardec.rest.model.command.CreateUserCommand;
+import com.gepardec.rest.model.command.UpdateGameCommand;
+import com.gepardec.rest.model.command.UpdateMatchCommand;
 import com.gepardec.rest.model.command.UpdateUserCommand;
 import jakarta.enterprise.context.ApplicationScoped;
 
 @ApplicationScoped
 public class RestMapper {
-    public ScoreDto toScore(CreateScoreCommand scoreCommand) {
-        return new ScoreDto(0,scoreCommand.userId(), scoreCommand.gameId(), scoreCommand.scorePoints());
-    }
-    public UserDto CreateUserCommandtoUser(CreateUserCommand createUserCommand) {
-        return new UserDto(0,createUserCommand.firstname(), createUserCommand.lastname(), false);
-    }
-    public UserDto UpdateUserCommandtoUser(Long id, UpdateUserCommand updateUserCommand) {
-        return new UserDto(id,updateUserCommand.firstname(), updateUserCommand.lastname(), updateUserCommand.deactivated());
-    }
+
+  public ScoreDto toScore(CreateScoreCommand scoreCommand) {
+    return new ScoreDto(0, scoreCommand.userId(), scoreCommand.gameId(),
+        scoreCommand.scorePoints());
+  }
+
+  public UserDto CreateUserCommandtoUser(CreateUserCommand createUserCommand) {
+    return new UserDto(0, createUserCommand.firstname(), createUserCommand.lastname(), false);
+  }
+
+  public UserDto UpdateUserCommandtoUser(Long id, UpdateUserCommand updateUserCommand) {
+    return new UserDto(id, updateUserCommand.firstname(), updateUserCommand.lastname(),
+        updateUserCommand.deactivated());
+  }
 
 
-  public GameOutcomeDto toGameOutcomeDto(Long id, UpdateGameOutcomeCommand gameOutcomeCommand) {
-    return new GameOutcomeDto(id, gameOutcomeCommand.gameId(),
+  public MatchDto toMatchDto(Long id, UpdateMatchCommand gameOutcomeCommand) {
+    return new MatchDto(id, gameOutcomeCommand.gameId(),
         gameOutcomeCommand.userIds());
   }
 
-  public GameOutcomeDto toGameOutcomeDto(CreateGameOutcomeCommand createGameCommand) {
-    return new GameOutcomeDto(null, createGameCommand.gameId(),
+  public MatchDto toMatchDto(CreateMatchCommand createGameCommand) {
+    return new MatchDto(null, createGameCommand.gameId(),
         createGameCommand.userIds());
   }
 
